--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         run: ./gradlew assembleDebug  # 或者使用 assembleRelease 进行发布构建
 
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3  # 更新为 v3
         with:
           name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk  # 根据你的项目结构调整路径
